--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,5 @@
-# Regra principal:
-# - Se a vaga estiver no Brasil: pode presencial/híbrida/remota.
-# - Se a vaga NÃO estiver no Brasil: só entra se for 100% remota.
 require_remote_outside_brazil: true
 
-# Palavras que indicam que a vaga é no Brasil (para permitir presencial/híbrido)
 brazil_location_keywords:
   - brasil
   - brazil
@@ -38,7 +34,6 @@ brazil_location_keywords:
   - osasco
   - barueri
 
-# Palavras que indicam vaga remota (importante para filtrar fora do Brasil)
 remote_keywords:
   - remote
   - fully remote
@@ -47,15 +42,16 @@ remote_keywords:
   - wfh
   - anywhere
   - distributed
+  - worldwide
+  - global
   - home office
   - remoto
   - 100% remoto
   - trabalho remoto
-  - remoto (br)
-  - remote (br)
+  - remote-first
+  - remote first
 
-# Bloqueia "Director/Head/VP/SVP" que não sejam da área certa (anti-ruído)
-# (o main.py usa isto direto no título)
+# Anti-ruído: só deixa passar Director/Head/VP/SVP se tiver um desses termos NO TÍTULO
 must_contain_any_of:
   - finance
   - financial
@@ -73,14 +69,11 @@ must_contain_any_of:
   - controladoria
   - tesouraria
 
-# Títulos-alvo (PT + EN) — CFO, Director, Head, VP, SVP
 target_title_keywords:
-  # CFO / Finance leadership
   - cfo
   - chief financial officer
   - diretor financeiro
   - diretora financeira
-  - diretoria financeira
   - finance director
   - director of finance
   - head of finance
@@ -91,229 +84,19 @@ target_title_keywords:
   - svp of finance
   - senior vice president finance
 
-  # Accounting / Controllership
+  - accounting director
+  - director of accounting
+  - head of accounting
   - controllership director
   - director of controllership
   - head of controllership
-  - head of controlling
   - controller
   - financial controller
   - diretor de controladoria
   - diretora de controladoria
-  - diretoria de controladoria
-  - accounting director
-  - director of accounting
-  - head of accounting
   - diretor de contabilidade
   - diretora de contabilidade
 
-  # Accounting + Tax (combo)
-  - accounting and tax director
-  - director of accounting and tax
-  - head of accounting and tax
-  - head of accounting & tax
-  - accounting & tax director
-  - diretor contábil e tributário
-  - diretora contábil e tributária
-  - diretor de contabilidade e tax
-  - diretora de contabilidade e tax
-  - diretor de contabilidade e tributário
-  - diretora de contabilidade e tributária
-  - diretor de contabilidade e impostos
-  - diretora de contabilidade e impostos
+  - accounting and
 
-  # Tax / Tributário
-  - tax director
-  - director of tax
-  - head of tax
-  - head of taxation
-  - diretor tributário
-  - diretora tributária
-  - diretor tributario
-  - diretora tributario
-  - diretor de tax
-  - diretora de tax
-  - diretor de impostos
-  - diretora de impostos
-  - diretoria tributária
-  - diretoria tributaria
-
-  # Treasury / Tesouraria
-  - treasury director
-  - director of treasury
-  - head of treasury
-  - diretor de tesouraria
-  - diretora de tesouraria
-  - vp treasury
-  - svp treasury
-
-# Anti-ruído: níveis abaixo que você NÃO quer
-exclude_title_keywords:
-  - intern
-  - internship
-  - estagi
-  - trainee
-  - junior
-  - júnior
-  - pleno
-  - analyst
-  - analista
-  - especialista
-  - assistente
-  - coordinator
-  - coordenador
-  - coordenadora
-  - supervisor
-  - sr analyst
-  - senior analyst
-  - manager
-  - gerente
-
-# Bônus por termos no descritivo (encaixe com Finance/Tax/Accounting/Treasury LATAM)
-nice_keywords_desc:
-  - latam
-  - latin america
-  - brasil
-  - mexico
-  - emerging markets
-  - treasury
-  - tesouraria
-  - controllership
-  - controladoria
-  - controller
-  - accounting
-  - contabilidade
-  - tax
-  - tribut
-  - impostos
-  - fp&a
-  - shared services
-  - ssc
-  - coe
-  - center of excellence
-  - erp
-  - sap
-  - ifrs
-  - us gaap
-  - compliance
-  - transfer pricing
-  - indirect tax
-  - direct tax
-  - payroll
-
-# Reduz spam (e evita mensagem gigante no Telegram)
-min_score_to_send: 72
-max_items_per_day: 12
-
-# Fontes “boards” remotas (já são remotas por natureza)
-sources:
-  remotive:
-    - "https://remotive.com/api/remote-jobs?search=cfo"
-    - "https://remotive.com/api/remote-jobs?search=finance%20director"
-    - "https://remotive.com/api/remote-jobs?search=head%20of%20finance"
-    - "https://remotive.com/api/remote-jobs?search=vp%20finance"
-    - "https://remotive.com/api/remote-jobs?search=svp%20finance"
-    - "https://remotive.com/api/remote-jobs?search=tax%20director"
-    - "https://remotive.com/api/remote-jobs?search=head%20of%20tax"
-    - "https://remotive.com/api/remote-jobs?search=treasury%20director"
-    - "https://remotive.com/api/remote-jobs?search=head%20of%20treasury"
-    - "https://remotive.com/api/remote-jobs?search=controllership"
-    - "https://remotive.com/api/remote-jobs?search=accounting%20director"
-  remoteok:
-    - "https://remoteok.com/api"
-  weworkremotely_rss:
-    - "https://weworkremotely.com/remote-jobs.rss"
-
-# Empresas grandes operando no Brasil (best-effort).
-# IMPORTANTE:
-# - O radar consegue puxar automaticamente APENAS as que usam Greenhouse/Lever.
-# - Se algum slug não existir, o main.py ignora e segue (não quebra).
-company_watchlist:
-  greenhouse_boards:
-    # Brasil / LatAm (muitas vagas boas)
-    - "nubank"
-    - "stone"
-    - "ifoodcarreiras"
-    - "hotmartcareersbr"
-    - "hotmartcareersen"
-    - "sumup"
-    - "gympass"
-    - "vtex"
-    - "quintoandar"
-    - "loft"
-    - "credithas"
-    - "mercadolibre"
-    - "olxbrasil"
-    - "rappi"
-    - "zenvia"
-    - "neon"
-    - "picpay"
-    - "c6bank"
-    - "dlocal"
-    - "wildlife"
-    - "kavak"
-    - "ebury"
-    - "pagbank"
-    - "b3"
-    - "rdstation"
-
-    # Globais grandes (algumas têm operação no BR; outras ajudam remoto forte)
-    - "stripe"
-    - "gitlab"
-    - "automatticcareers"
-    - "zapier"
-    - "remotecom"
-    - "deel"
-    - "shopify"
-    - "coinbase"
-    - "workday"
-    - "snowflake"
-    - "datadog"
-    - "okta"
-    - "twilio"
-    - "asana"
-    - "notion"
-    - "figma"
-    - "canva"
-    - "intercom"
-    - "brex"
-    - "wise"
-    - "revolut"
-    - "cloudflare"
-    - "airbnb"
-    - "spotify"
-    - "microsoft"
-    - "google"
-    - "amazon"
-
-  lever_companies:
-    # Brasil / LatAm / Fintech / Tech
-    - "binance"
-    - "bv"
-    - "cloudwalk"
-    - "starkbank"
-    - "ciandt"
-    - "swile"
-    - "tryjeeves"
-    - "tesorio"
-    - "metabase"
-    - "coins"
-    - "caliza-financial-technologies"
-    - "draftea"
-    - "gupy"
-    - "loggi"
-    - "quintoandar"
-    - "loft"
-
-    # Globais / Remote-ish
-    - "brex"
-    - "wise"
-    - "revolut"
-    - "plaid"
-    - "robinhood"
-    - "pinterest"
-    - "discord"
-    - "duolingo"
-    - "openai"
-    - "anthropic"
 
